--- a/Field Book/res/raw/changelog.txt
+++ b/Field Book/res/raw/changelog.txt
@@ -1,8 +1,38 @@
-Field Book v2.0 New Features
--	New user interface
--	Built-in tutorial
--	Trait builder
--	Import XLS
--	Field map and analysis
--	Translations: Spanish, German
--	Bug fixes
+13/2.1.0
+Added this change log
+Changed tutorial setup
+Language dialog updated
+Dialog displays to share exported files
+App no longer jumps to the first plot when external hardware added
+Items are disabled if not available
+Option to reset, export, or import app database
+Added support for Amharic, Arabic, Brazilian Portuguese, Chinese, Filipino, French, Hindi, Italian, Japanese, Oromo, Russian, and Swahili.
+Advanced feature option to play a sound when the first level changes
+Advanced feature option to move to next empty plot via button
+Advanced feature option to move to specific unique identifier
+Bugfix: minimum in numeric traits is enforced properly
+Bugfix: all text in text traits is deletable with the keyboard
+
+12/2.0.0
+Updated user interface
+Create traits from within the app
+Export and load trait lists
+Added an audio trait format
+Lots of bug fixes
+Added support for Spanish and German
+Map feature added to visualize and analyze plots (beta)
+
+5/1.6.0
+Added support for multiple instances of the same trait format
+
+4/1.5.0
+Added text input trait format
+Added table export option
+Lots of bug fixes
+
+2/1.1.0
+Added location recording and exporting via device GPS. Accessible via settings. Tablet GPS has a high resolution and should only be used for field location.
+“Quit” option now resets Person and Location fields.
+
+1/1.0.0
+Initial release
