--- a/Field Book/res/raw/changelog.txt
+++ b/Field Book/res/raw/changelog.txt
@@ -1,6 +1,10 @@
 15/2.1.3
+Option to make sound when primary organizer changes added
+Option to go to specific unique ID added (for barcodes)
+Option to go to next empty plot added
 Traits can now be made in other languages
 Changelog can be accessed from the About dialog
+Support for XLS readded
 
 15/2.1.2
 Fixed issue with field folders
