--- a/Field Book/res/raw/changelog.txt
+++ b/Field Book/res/raw/changelog.txt
@@ -1,4 +1,9 @@
-15/2.1.3
+17/2.1.4
+Fixed bug that moved current plot to first plot when screen turned off
+Deselect categorical traits by clicking the current selection
+Miscellaneous interface improvements
+
+16/2.1.3
 Option to make sound when primary organizer changes added
 Option to go to specific unique ID added (for barcodes)
 Option to go to next empty plot added
