--- a/Field Book/res/raw/changelog.txt
+++ b/Field Book/res/raw/changelog.txt
@@ -1,18 +1,22 @@
+19/2.2.0
+New file chooser added
+Miscellaneous interface improvements
+Long press ActionBar icons to get labels
+
 18/2.1.5
-Visibility of traits is now modified in the Traits screen instead of Setup
+Visibility of traits is now changed in the Traits screen instead of Setup
 
 17/2.1.4
-Fixed bug that moved current plot to first plot when screen turned off
-Deselect categorical traits by clicking the current selection
-Miscellaneous interface improvements
+Clear categorical traits by reclicking the current choice
+BUGFIX: App doesn't move to first plot when screen is turned off
 
 16/2.1.3
-Option to make sound when primary organizer changes added
-Option to go to specific unique ID added (for barcodes)
-Option to go to next empty plot added
-Traits can now be made in other languages
+New Advanced Settings option to make sound when primary organizer changes
+New Advanced Settings option to go to specific unique ID (for barcodes)
+New Advanced Settings option to go to next plot without data
 Changelog can be accessed from the About dialog
 Support for XLS readded
+BUGFIX: Traits can now be made in other languages
 
 15/2.1.2
 Fixed issue with field folders
