--- a/Field Book/res/values-es/strings.xml
+++ b/Field Book/res/values-es/strings.xml
@@ -5,6 +5,7 @@
     <string name="search">Buscar</string>
     <string name="resources">Recursos</string>
     <string name="audio">Audio</string>
+    <string name="language">Cambiar Idioma</string>
     <string name="quit">Salir</string>
     <string name="traitdetails">Detalles de la variable</string>
     <string name="area">Área</string>
@@ -23,6 +24,7 @@
     <string name="okay">OK</string>
     <string name="stop">Detener</string>
     <string name="deletefile">Eliminar archivo</string>
+    <string name="areyousure">Seguro(a)?</string>
     <string name="yes">Sí</string>
     <string name="no">No</string>
     <string name="genericerror">Error</string>
@@ -68,6 +70,7 @@
     <string name="map">Mostrar mapa</string>
     <string name="mapconfig">Configurar mapa</string>
     <string name="configure">Configurar</string>
+    <string name="trait">Variable</string>
     <string name="direction">Campo comienza en la...</string>
     <string name="mapanalyze">Analizar</string>
     <string name="mapexport">Exportar</string>
@@ -97,8 +100,6 @@
     <string name="choosetraitfile">Escoja archivo de variables</string>
     <string name="addtrait">Agregar Variable</string>
     <string name="traiteditor">Editor de variables</string>
-    <string name="language">Cambiar Idioma</string>
-    <string name="trait">Variable</string>
     <string name="format">Formato</string>
     <string name="def">Predeterminado</string>
     <string name="minimum">Mínimo</string>
@@ -115,12 +116,12 @@
     <string name="text">Texto</string>
     <string name="up">Arriba</string>
     <string name="down">Abajo</string>
+    <string name="copy">Copiar</string>
     <string name="del">Eliminar</string>
     <string name="mandatorytrait">Nombre de la variable no puede estar vacío</string>
     <string name="traitexists">Variable ya existe</string>
     <string name="deletetrait">Eliminar variable</string>
     <string name="deletealltraits">Eliminar todo</string>
-    <string name="areyousure">Seguro(a)?</string>
     <string name="notanumber">El valor predeterminado, mínimo y máximo deben ser numéricos</string>
     <string name="notemptycategory">La categoría no puede permanecer vacía</string>
     <string name="truevalue">Verdadero</string>
@@ -139,7 +140,7 @@
     <string name="tips">Habilitar el tutorial</string>
     <string name="cycle">Avanzar a la siguiente parcela y primera variable de la lista.</string>
     <string name="enablemap">Mapa</string>
-    <string name="useday">Utilice número del día del año en lugar de fecha </string>
+    <string name="useday">Utilice número del día del año en lugar de fecha</string>
     <string name="help">Ayuda</string>
     <string name="analyzewait">Procesando...</string>
     <string name="mapexportwait">Procesando...</string>
@@ -147,7 +148,6 @@
     <string name="prev">Anterior</string>
     <string name="next">Siguiente</string>
     <string name="stored">Datos han sido guardados</string>
-    <string name="copy">Copiar</string>
     <string name="optional">Opcional</string>
     <string name="savetrait">Guardar variable</string>
     <string name="exportmsg">Exportando...</string>
@@ -155,19 +155,19 @@
     <string name="german">Deutsch</string>
     <string name="tutorial">Tutorial</string>
     <string name="tipshort">Tutorial</string>
-    <string name="help1">Use el menú "AYUDA" para conocer más acerca de Field Book</string>
+    <string name="help1">Use el menú AYUDA para conocer más acerca de Field Book</string>
     <string name="help2">Active el Tutorial en Configuración avanzada</string>
     <string name="mhelp1">Las barras desplegables en la parte superior de la pantalla muestran información de la columna escogida o seleccionada. Éstas pueden ser cambiadas en el menú Congfiguración.</string>
     <string name="mhelp2">Las flechas grandes y negras permiten mover de entrada a entrada o de parcela a parcela. Las flechas azules y pequeñas permiten mover de variable a variable.</string>
     <string name="mhelp3">Cuando una variable activa es seleccionada o presionada, aparecerá una barra desplegable con la lista de variables habilitadas.</string>
     <string name="mhelp4">El área de texto del nivel de primer y segundo orden se puede usar para desplazarse a la primera aparición de un valor específico.</string>
-    <string name="mhelp5">"Buscar" en la parter superior de la pantalla permite la búsqueda de entradas.</string>
+    <string name="mhelp5">Buscar en la parter superior de la pantalla permite la búsqueda de entradas.</string>
     <string name="shelp1">Para importar archivos en formato CSV o XLS seleccione Campos</string>
     <string name="shelp2">Después de cargar un archivo de campo, las columnas del archivo aparecerán de lado izquierdo y el tipo de dato se podrá configurar en el lado derecho. Todo archivo de campo debe contener tres columnas: un identifcador único (ID), nivel de primer y segundo orden.</string>
     <string name="shelp3">Para agregar o importar nuevas variables para evaluar, presione Variable.</string>
     <string name="shelp4">Para finalizar la configuración de los datos a evaluar escoja Configuración.</string>
     <string name="shelp5">En el menú Configuración: Usuario es la persona que hará/registrará los datos evaluados, Ubicación son las coordenadas asociadas al campo, Variables permite al usuario escoger las variables a evaluar en la pantalla principal, Barra desplegable permite al usuario mostrar tres líneas de información adicional en la pantalla principal.</string>
-    <string name="shelp6">Una vez que los datos fueron importados, el botón "atrás" en la esquina superior izquierda lo llevará a la pantalla principal.</string>
+    <string name="shelp6">Una vez que los datos fueron importados, el botón atrás en la esquina superior izquierda lo llevará a la pantalla principal.</string>
     <string name="thelp1">Agregar Variable en el menú creará un nueva variable. No podrá usar el teclado y el tutorial al mismo tiempo, desactive el tutorial si desea agregar una nueva variable. Hay diferentes tipos de formatos disponibles para las variables que deseé usted evaluar.</string>
     <string name="thelp2">Para importar archivos de variables, presione el botón Menú y escoja la opción Importar.</string>
     <string name="thelp3">Consulte el manual del app para leer sobre información adicional con respecto a la creación de variables.</string>
@@ -265,7 +265,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Swahili</string>
-    <string name="jumptoplotid">Habilita la opción de avanzar o ir a  un ID en específico.</string>
+    <string name="jumptoplotid">Habilita la opción de avanzar o ir a un ID en específico.</string>
     <string name="jumptoplotidbutton">Ir a ID</string>
     <string name="corner1">Esquina 1</string>
     <string name="corner2">Esquina 2</string>
