Rearranged Settings list order Added a warning when deleting a photo Halved the scrolling speed when holding the plot arrows Fixed a bug where the primary/secondary order labels weren't updating on the main screen Fixed a bug where the keyboard stayed visible when it shouldn't Fixed a bug where the focus wasn't on the trait name when creating several traits in succession

--- a/Field Book/res/values/strings.xml
+++ b/Field Book/res/values/strings.xml
@@ -67,6 +67,8 @@
 
     <string name="importdb">Import</string>
 
+    <string name="deletePhoto">Are you sure you want to delete this photo?</string>
+
     <string name="firstname">First name</string>
     <string name="lastname">Last name</string>
     <string name="person">Person</string>
