Fixed day of year advanced setting Disable left, right, or both entry arrows in advanced settings Renamed exported files to avoid potentially overwriting Spaces in input file column names are replaced with underscores More errors are written to error logs Fixed a bug that cause a crash when toggling visibility of nonexistent traits Fixed a bug that caused a crash when getting location Fixed a bug that caused the unique id to incorrectly indicate it was duplicated Fixed a bug that caused collected photos to rotate on certain devices Fixed a bug that prevented export or import of the app database

--- a/Field Book/res/values/strings.xml
+++ b/Field Book/res/values/strings.xml
@@ -141,8 +141,13 @@
     <string name="falsevalue">False</string>
     <string name="rustwarning">Severity already stored</string>
     <string name="disableshare">Disable file sharing when exporting</string>
-    <string name="disableentrynav">Disable moving between entries if no data collected</string>
+    <string name="disableentrynavleft">Disable left entry arrow if no data collected</string>
+    <string name="disableentrynavright">Disable right entry arrow if no data collected</string>
     <string name="disableentryanavwarning">Data must be collected before you can go to the next entry</string>
+
+    <string name="changeAllVisibilityError">Create traits before disabling their visibility.</string>
+    <string name="barcodeScan">Adds icon to instantly open camera to scan barcode</string>
+    <string name="barcodescan">Scan barcode</string>
 
     <string name="advanced">Advanced settings</string>
     <string name="listfieldimport">List imported fields</string>
