--- a/Field Book/app/src/main/res/values/strings.xml
+++ b/Field Book/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="visibility">Visibility</string>
     <string name="optional">Optional</string>
     <string name="addtrait">Add trait</string>
+    <string name="copy">Copy</string>
+    <string name="edit">Edit</string>
 
     <string name="numeric">Numeric</string>
     <string name="qualitative">Categorical</string>
@@ -80,9 +82,6 @@
     <string name="truevalue">True</string>
     <string name="falsevalue">False</string>
     <string name="catseparator">Separate items with /</string>
-
-    <string name="copy">Copy</string>
-    <string name="del">Delete</string>
 
     <string name="mandatorytrait">Trait name cannot be empty</string>
     <string name="traitexists">Trait already exists</string>
