Changed no date button to save date in addition to setting to Jan 1 2000 Renamed Setup to Profile

--- a/Field Book/app/src/main/res/values/strings.xml
+++ b/Field Book/app/src/main/res/values/strings.xml
@@ -45,7 +45,8 @@
     <string name="settings">Settings</string>
     <string name="fields">Fields</string>
     <string name="traits">Traits</string>
-    <string name="setup">Setup</string>
+    <string name="setup">Profile</string> <!-- Get rid of this when it gets translated -->
+    <string name="profile">Profile</string>
     <string name="export">Export</string>
     <string name="advanced">Advanced Settings</string>
     <string name="language">Language</string>
