Add test landscape mode Extend quick goto edittext Adjust field name size in nav drawer Fix a bug that crashed the app if spaces were included in column names Include app manual in git Update strings Add 720dp dimens Fix bug with min/max numeric Change all dialogs to alertdialogs Update all buttons to use default material theme Update trait layouts Fix bug with dragsortlistview (in trait list) Added person and location to usertraits table in database

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Swahili</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">Aktiviert die Option zu einem bestimmten einzigartigen Zuordnungsmerkmal zu navigieren</string>
     <string name="jumptoplotidbutton">Gehe zu ID</string>
     <string name="corner1">Ecke 1 (der Versuchsparzelle)</string>
