--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -267,6 +267,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Swahili</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">Habilita la opción de avanzar o ir a un ID en específico.</string>
     <string name="jumptoplotidbutton">Ir a ID</string>
     <string name="corner1">Esquina 1</string>
