--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -267,6 +267,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">स्वाहिली</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">विशिष्ट अद्वितीय पहचानकर्ता पे जाने के लिए विकल्प को सक्षम करता है</string>
     <string name="jumptoplotidbutton">पहचानकर्ता पे जाएँ</string>
     <string name="corner1">पहला कोना</string>
