--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">سواحلية</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">تفعيل الخيار للمتقدم لتحديد المعرف الفريد</string>
     <string name="jumptoplotidbutton">إنتقل إلى ID</string>
     <string name="corner1">الزاوية الأولى</string>
