--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">swahili</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">"activer l'option pour passer à un identifiant unique spécifique"</string>
     <string name="jumptoplotidbutton">aller à ID</string>
     <string name="corner1">Angle 1</string>
