--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">スワヒリ語</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">特定の識別番号まで飛ぶオプションを有効にする。</string>
     <string name="jumptoplotidbutton">このIDに飛ぶ</string>
     <string name="corner1">コーナー1</string>
