--- a/app/src/main/res/values-om-rET/strings.xml
+++ b/app/src/main/res/values-om-rET/strings.xml
@@ -258,6 +258,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Afaan Swahilii</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">"Maqaa dhuunfatti akka darbuun danda'amu taasisuu"</string>
     <string name="jumptoplotidbutton">Maqaa dhuunfaa biraa deemi</string>
     <string name="corner1">Qarqara 1</string>
