--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Suaíle</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">Habilitar opção para avançar para um identificador único</string>
     <string name="jumptoplotidbutton">Ir para ID</string>
     <string name="corner1">Canto 1</string>
