--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Суахили</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">Дополнительные опции для уникального идентификаторас</string>
     <string name="jumptoplotidbutton">Переход к ID</string>
     <string name="corner1">Координаты 1-го угла делянки</string>
