--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -268,6 +268,7 @@
     <string name="amharic">አማርኛ፤</string>
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">斯瓦希里语</string>
+    <string name="bengali">বাংলা</string>
     <string name="jumptoplotid">启用选项将提前到特定的唯一标识符</string>
     <string name="jumptoplotidbutton">转到 ID</string>
     <string name="corner1">转角 1</string>
