--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="traitdetails">Trait details</string>
     <string name="nodata">No data</string>
     <string name="theme">Theme</string>
+    <string name="lock_data">Lock data</string>
+    <string name="unlock_data">Unlock data</string>
 
     <!-- Trait layouts and messages -->
     <string name="minusday">-1</string>
@@ -36,8 +38,8 @@
     <string name="hardwaremissing">Your device does not contain the necessary hardware for this feature</string>
     <string name="photomissing">Photo does not exist</string>
     <string name="photodecodefail">Photo cannot be read</string>
-    <string name="valueless">Value is less than set minimum</string>
-    <string name="valuemore">Value is larger than set maximum</string>
+    <string name="valueless">Value is less than allowed minimum</string>
+    <string name="valuemore">Value is larger than allowed maximum</string>
     <string name="rustwarning">Severity already stored</string>
     <string name="deletePhoto">Are you sure you want to delete this photo?</string>
 
@@ -45,15 +47,13 @@
     <string name="settings">Settings</string>
     <string name="fields">Fields</string>
     <string name="traits">Traits</string>
-    <string name="setup">Profile</string>
-
-    <!-- Get rid of this when it gets translated -->
     <string name="profile">Profile</string>
     <string name="export">Export</string>
     <string name="advanced">Advanced</string>
     <string name="language">Language</string>
     <string name="updatemsg">Changelog</string>
-    <string name="sampledata">Sample Data</string>
+
+    <string name="sampledata">Sample data</string>
     <string name="loadsampledata">Would you like to load the sample data provided?</string>
 
     <!-- Traits -->
@@ -90,7 +90,7 @@
     <string name="import_title">Import</string>
     <string name="truevalue">True</string>
     <string name="falsevalue">False</string>
-    <string name="catseparator">Separate items with /</string>
+    <string name="catseparator">Separate categories with /</string>
 
     <string name="mandatorytrait">Trait name cannot be empty</string>
     <string name="traitexists">Trait already exists</string>
@@ -112,21 +112,21 @@
     <string name="rangechime">Primary order sound</string>
     <string name="nextmissingenable">Next entry with no data</string>
     <string name="jumptoplotid">Move to unique identifier</string>
-    <string name="datagrid">Datagrid (Beta)</string>
+    <string name="datagrid">Datagrid</string>
 
-    <string name="tips_desc">Adds a tutorial icon to the main, settings, and traits screens</string>
+    <string name="tips_desc">Adds a tutorial icon to the main, settings, fields, and traits screens</string>
     <string name="quickgoto_desc">Changes middle section of main screen to the legacy Quick GoTo</string>
     <string name="cycle_desc">After going through all traits, the app goes to the next entry</string>
     <string name="useday_desc">Use day of year when collecting data instead of the date</string>
     <string name="ignoreentries_desc">Skips entries that have data for the current trait</string>
     <string name="disableshare_desc">When files are exported, the share dialog will not be displayed</string>
-    <string name="disableentrynavleft_desc">If no data has been collected, disables left entry movement</string>
-    <string name="disableentrynavright_desc">If no data has been collected, disables right entry movement</string>
+    <string name="disableentrynavleft_desc">If no data has been collected, disables left entry arrow</string>
+    <string name="disableentrynavright_desc">If no data has been collected, disables right entry arrow</string>
     <string name="barcodescan_desc">Opens camera to scan barcode and move to the specific entry</string>
     <string name="rangechime_desc">Notification sound when the primary order changes</string>
     <string name="nextmissingenable_desc">Adds a button to the toolbar that jumps to the next entry with no data for the current trait</string>
     <string name="jumptoplotid_desc">Opens dialog to input unique id and move to specific entry</string>
-    <string name="datagrid_desc">Displays a grid of plots and traits showing collected data</string>
+    <string name="datagrid_desc">Displays a spreadsheet of plots and traits showing collected data</string>
 
     <!-- Advanced settings titles and messages -->
     <string name="nomatches">No matching value</string>
@@ -138,32 +138,35 @@
 
     <!-- Tutorial -->
     <string name="tutorial">Tutorial</string>
-    <string name="tipsdesc">Do you wish to enable the tutorial? This setting can be changed in the Advanced Settings.</string>
+    <string name="tipsdesc">Would you like to enable the tutorial? This setting can be changed in the Advanced Settings.</string>
     <string name="prev">Previous</string>
     <string name="next">Next</string>
 
-    <string name="mhelp1">The InfoBars at the top of the screen show extra data for each entry. These can be changed using the dropdown menus or in the Setup menu.</string>
+    <string name="mhelp1">The InfoBars at the top of the screen show extra data for each entry. These can be changed using the dropdown menus.</string>
     <string name="mhelp2">The large, black arrows move between entries. The small, green arrows move between traits.</string>
     <string name="mhelp3">A list of active traits is displayed when the current trait is pressed.</string>
     <string name="mhelp4">The folder icon displays a list of files in the Resources folder.</string>
     <string name="mhelp5">The search icon allows database queries.</string>
     <string name="mhelp6">The document icon displays a summary of all data for a given entry.</string>
-    <string name="mhelp7">The gear icon will take you back to the settings.</string>
+    <string name="mhelp7">All other options are in the navigation drawer, on the left.</string>
 
-    <string name="shelp1">To import a CSV or XLS file, select Fields.</string>
-    <string name="shelp2">After selecting a file, the file columns are listed on the left and their data type can be configured on the right. Files must contain three columns: a unique identifier, a primary order, and a secondary order.</string>
-    <string name="shelp3">To add or import new traits, press Traits.</string>
-    <string name="shelp4">To prepare for data collection, choose Setup.</string>
-    <string name="shelp5">In the Setup screen: Person is the name of the person collecting data, Location collects the field coordinates, Traits allows adjustment of active traits, and InfoBars display contextual entry information on the main screen.</string>
-    <string name="shelp6">Data can be exported in two formats: database or table. Columns from the original file can be included or excluded from the exported file.</string>
-    <string name="shelp7">Advanced Settings contains several optional settings to augment how data is collected.</string>
-    <string name="shelp8">Once data is imported, the back button in the top left corner is used to move to the main screen.</string>
+    <string name="shelp1">To import and manage fields, select Fields.</string>
+    <string name="shelp2">To add, import, or manage traits, select Traits.</string>
+    <string name="shelp3">To set the person and location, select Profile.</string>
+    <string name="shelp4">To export data, select Export. Data can be exported in two formats: database or table. Columns from the original file can be included or excluded from the exported file.</string>
+    <string name="shelp5">Advanced Settings contains several optional settings to augment how data is collected.</string>
+    <string name="shelp6">Once data is imported, the back button in the top left corner will take you to the main screen.</string>
 
-    <string name="thelp1">Add Trait on the menu creates a new trait. It is not possible to use the keyboard and tutorial at the same time. Different trait formats are available for data collection.</string>
-    <string name="thelp2">To import trait files, press the menu button and choose Import.</string>
+    <string name="thelp1">Add Trait on the menu creates a new trait. It is not possible to use the keyboard and tutorial at the same time. Different trait formats have different layouts.</string>
+    <string name="thelp2">To import trait files, choose Import on the toolbar.</string>
     <string name="thelp3">Consult the app manual for additional information about trait creation.</string>
     <string name="thelp4">Use the checkbox on each trait to toggle its visibility on the main collection screen. Uncheck any traits you do not want to collect.</string>
     <string name="thelp5">Press the back button in the top left corner to return to the Settings screen.</string>
+
+    <string name="fhelp1">Add Field on the toolbar allows a field file to be imported.</string>
+    <string name="fhelp2">Files must contain three columns: a unique identifier, a primary order, and a secondary order. The primary/secondary order are used for navigation in the field.</string>
+    <string name="fhelp3">The field with the brown radio button is the currently active field.</string>
+    <string name="fhelp4">To delete a field, open the menu on the left side of a field name and select Delete.</string>
 
     <!-- About dialog -->
     <string name="about">About</string>
@@ -178,7 +181,7 @@
     <string name="devp">Jesse Poland, Kansas State University</string>
     <string name="devpemail">jpoland@ksu.edu</string>
     <string name="devpsite">http://wheatgenetics.org</string>
-    <string name="translist">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa</string>
+    <string name="translist">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman</string>
 
     <!-- Other Apps -->
     <string name="otherapps">Other Apps</string>
@@ -189,7 +192,7 @@
     <string name="filename">Filename</string>
     <string name="headerformat">Format</string>
     <string name="allcolumns">All imported columns</string>
-    <string name="fieldcolumns">Imported columns</string>
+    <string name="fieldcolumns">Field columns</string>
     <string name="onlyunique">Only unique identifier</string>
     <string name="alltraits">All traits</string>
     <string name="activetraits">Only active traits</string>
@@ -219,6 +222,8 @@
     <string name="oromo">Afaan Oromoo</string>
     <string name="swahili">Swahili</string>
     <string name="chiga">Chiga</string>
+    <string name="bengali">বাংলা</string>
+    <string name="swedish">Swedish</string>
 
     <!-- Update dialog -->
     <string name="notmostrecent">You do not have the most recent version of Field Book!</string>
@@ -248,11 +253,11 @@
     <!-- Database dialog -->
     <string name="dbbackup">Database</string>
     <string name="resetcomplete">Database has been deleted</string>
-    <string name="dbimport">Import Database</string>
-    <string name="dbexport">Export Database</string>
+    <string name="dbimport">Import database</string>
+    <string name="dbexport">Export database</string>
     <string name="dbreset">Reset database</string>
-    <string name="resetwarning1">All data will be deleted on reset. Are you sure?</string>
-    <string name="resetwarning2">This action cannot be reversed. The app will quit after clearing the database. Do you still wish to continue?</string>
+    <string name="resetwarning1">All data will be deleted on reset. Are you sure you want to reset the database?</string>
+    <string name="resetwarning2">A database reset cannot be reversed. The app will quit after clearing the database. Are you really sure you want to continue?</string>
 
     <!-- Import dialog -->
     <string name="importfields">Import field</string>
@@ -278,7 +283,6 @@
     <string name="results">Search results</string>
     <string name="range">Range</string>
     <string name="plot">Plot</string>
-
     <string name="add">Add</string>
     <string name="clear">Clear</string>
     <string name="equalsto">is equal to</string>
@@ -287,15 +291,39 @@
     <string name="notislike">does not contain</string>
     <string name="morethan">is more than</string>
     <string name="lessthan">is less than</string>
-    <string name="searchempty">Search did not return results</string>
+    <string name="searchempty">No results</string>
 
-    <!-- Strings being used for dev -->
+    <!-- Field management strings -->
+    <string name="delete_field">Delete field</string>
+    <string name="delete_field_confirmation">Are you sure you want to delete this field? This will also delete all data associated with this field.</string>
+    <string name="field_exists">Field exists</string>
+    <string name="field_exists_message">A field with this name already exists. Do you want to overwrite the existing field?</string>
+    <string name="choose_new_default">Load a new field before collecting data.</string>
+    <string name="dateimported">Import date</string>
+    <string name="dateedited">Edit date</string>
+    <string name="dateexported">Export date</string>
+    <string name="fieldsummary">Field summary</string>
+    <string name="options">Options</string>
+    <string name="walkingorder">Sort entries by:</string>
+
+    <!-- Drawer strings -->
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    <string name="lock_data">Lock data</string>
-    <string name="unlock_data">Unlock data</string>
 
-    <!-- Strings below this line have not been integrated into the app -->
+
+    <!-- Strings below here have not been integrated into the app -->
+
+    <!-- Customization strings TODO -->
+    <string name="customize">Customize</string>
+    <string name="infobar_number">Number of InfoBars</string>
+    <string name="export_name">Exported file names</string>
+    <string name="photo_name">Photo names</string>
+    <string name="toolbar">Toolbar</string>
+    <string name="custom_field_name">Field Name</string>
+    <string name="custom_date">Date</string>
+    <string name="custom_unique_id">Unique identifier</string>
+    <string name="custom_trait">Trait</string>
+
     <!-- Map -->
     <string name="importlocmessage">Choose the columns corresponding to the four corners of each entry.</string>
     <string name="importloc">Import plot location data</string>
@@ -320,25 +348,6 @@
     <string name="direction">Field starts in…</string>
     <string name="mapanalyze">Analyze</string>
     <string name="enablemap">Map</string>
-
-    <!-- Field management -->
-    <string name="load">Load</string>
-    <string name="imported">Imported</string>
-    <string name="collecteddata">Collected data</string>
-    <string name="dateedited">Date edited</string>
-    <string name="active">Active</string>
-    <string name="deletedataset">Do you wish to delete this data set? This is permanent and non-reversible.</string>
-    <string name="fieldexists">This field name already exists. Please choose a different name.</string>
-    <string name="managefields">Manage fields</string>
-    <string name="importnew">Import new</string>
-    <string name="fieldsummary">Field summary</string>
-    <string name="options">Options</string>
-    <string name="walkingorder">Sort entries by:</string>
-    <string name="dateimported">Date imported</string>
-    <string name="fieldname">Field name</string>
-    <string name="datasetselected">A valid data set has been loaded</string>
-    <string name="current">Current</string>
-    <string name="listfieldimport">List imported fields</string>
 
     <!-- Network -->
     <string name="sync">Sync</string>
